--- a/trunk/core/www/index.html
+++ b/trunk/core/www/index.html
@@ -6,7 +6,7 @@
     <meta name="KEYWORDS" content="SolidOpt">
     <meta name="robots" content="index,follow">
 
-    <title>Solid Optimizer Project</title>
+    <title>Solid Optimizer Project - works!!!</title>
     
     <link rel="shortcut icon" href="http://www.solidopt.org/favicon.ico" type="image/x-icon">
   </head><body>
