--- a/trunk/core/www/index.html
+++ b/trunk/core/www/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html dir="ltr" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" lang="en"><head>
-
   
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="KEYWORDS" content="SolidOpt">
     <meta name="robots" content="index,follow">
 
     <title>Solid Optimizer Project - works!!!</title>
-    
+
     <link rel="shortcut icon" href="http://www.solidopt.org/favicon.ico" type="image/x-icon">
   </head><body>
     It Works!!!
-  </body></html>
+  </body>
+</html>
